[REFACTOR] Remove deprecated URL usage